# Pravaah

./: .dockerignore  Dockerfile  README.md
backend/: .gitignore  llm.py  main.py  models.py  multilingual.py  ocr_processor.py  pyproject.toml  requirements.txt  test.py  vector.py
backend/chroma_langchain_db/10d2c6fb-9c3e-4074-bab3-dca85f725ee0/: index_metadata.pickle
backend/chroma_langchain_db/94bcf604-e7d6-454f-9fcd-e0d8067c2175/: index_metadata.pickle
backend/routers/: human_router.py  professional_router
